# AI-snapper

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ReadMe.md  build.rs  coverage-commands.md  package-lock.json  package.json  pytest.ini  run_tests.py  tarpaulin.toml
node-version/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  package-lock.json  package.json
node-version/src/: ai_client.ts  config.ts  hotkey_monitor.ts  main.ts  screenshot.ts  ui.ts
node-version/test/: config.test.ts  integration.test.ts
scripts/: README.md  automation_test.py  automation_test.sh  coverage.sh  run_tests.sh
src/: ai_client.rs  ai_client.ts  config 2.rs  config.rs  config.ts  daemon.rs  hotkey_monitor.rs  hotkey_monitor.ts  lib.rs  main.rs  main.ts  permissions.rs  screenshot.rs  terminal_monitor.ts  ui 2.rs  ui.rs
test/: config.test.ts  integration.test.ts  setup.ts  test_hotkey_suite.py  test_macos_integration.py  test_real_hotkey.py
tests/: integration_tests.rs  test_ai_client.rs  test_automation.rs  test_config.rs  test_daemon.rs  test_hotkeys.rs  test_main.rs  test_screenshot.rs  test_ui.rs
