[package]
name = "ai-screenshot-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-screenshot-analyzer"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
screenshots = "0.5"
device_query = "2.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
image = { version = "0.24", features = ["png", "jpeg"] }
crossterm = "0.27"
indicatif = "0.17"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
toml = "0.8"


[dev-dependencies]

# Code coverage configuration
[profile.coverage]
inherits = "dev"
opt-level = 0
debug = true
incremental = false
codegen-units = 1